# MindBox

backend/: Cargo.toml
backend/sql/: 0.sql
backend/sql/mindbox/: 0.sql
backend/sql/mindbox/minds/: 0.sql
backend/src/: main.rs
