[package]
name = "mindbox"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", default-features = false, features = [
    "macros",
] }
chrono = { version = "0.4.0", default-features = false, features = ["serde", "now"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio", "postgres"] }

[profile.release]
lto = true
strip = true
